--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dev = [
   "uvicorn>=0.35,<1",
 ]
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["bookbinder*"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 markers = [
